# CompChords

./: .gitignore  CMakeLists.txt  Chord.cpp  Chord.h  Key.cpp  Key.h  Measure.cpp  README.md  Track.cpp  Track.h  main.cpp
